--- a/how-we-help.html
+++ b/how-we-help.html
@@ -3,29 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Discover how ClaimWrit helps attorneys with precise demand-letter drafting and post-settlement solutions to maximize case outcomes."/>
   <title>How We Help | ClaimWrit</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-size: 18px; text-align: left; }
-    nav ul {
-      list-style: none; margin: 0; padding: 0;
-      background-color: #88c9c5; text-align: center;
-    }
-    nav ul li { display: inline-block; margin: 0 1rem; }
-    nav ul li a {
-      color: white; text-decoration: none;
-      font-weight: bold; font-size: 1.1rem;
-    }
-    nav ul li a:hover { text-decoration: underline; }
-  </style>
 </head>
 <body>
 
-  <nav>
+  <nav aria-label="Main navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="our-mission.html">Our Mission &amp; Expertise</a></li>
-      <li><a class="active" href="how-we-help.html">How We Help</a></li>
+      <li><a href="how-we-help.html" class="active" aria-current="page">How We Help</a></li>
       <li><a href="request-sample.html">Request Sample DEMAND</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -33,44 +21,55 @@
     </ul>
   </nav>
 
-  <main style="padding:3rem 1rem; max-width:900px; margin:0 auto;">
+  <main class="content-container">
     <h1>How We Help</h1>
-    <p>
+    <p class="intro-text">
       ClaimWrit provides attorneys with precise demand-letter drafting and post-settlement solutions, streamlining case management and maximizing financial outcomes. Whether firms need structured pre-suit demand letters or assistance navigating complex settlement reconciliation, our process is designed for efficiency, accuracy, and reliability.
     </p>
 
-    <h2>Tailored Case Narratives for Stronger Negotiations</h2>
-    <p>
-      Every demand letter is meticulously crafted to reflect case-specific details, ensuring attorneys present fact-driven, compelling claims. We incorporate liability nuances and medical complexities, transforming legal documentation into strategic negotiation tools.
-    </p>
-    <p>
-      ClaimWrit reviews all medical chronology thoroughly, ensuring the demand letter captures every injury, test result, and physician note, reinforcing the strength of a case.
-    </p>
-    <p>
-      ClaimWrit will also prepare asset affidavits for MVAs at no additional cost upon request—a service that other legal writers charge separately for.
-    </p>
+    <section class="service-section" aria-labelledby="narratives">
+      <h2 id="narratives">Tailored Case Narratives for Stronger Negotiations</h2>
+      <div class="service-content">
+        <p>
+          Every demand letter is meticulously crafted to reflect case-specific details, ensuring attorneys present fact-driven, compelling claims. We incorporate liability nuances and medical complexities, transforming legal documentation into strategic negotiation tools.
+        </p>
+        <p>
+          ClaimWrit reviews all medical chronology thoroughly, ensuring the demand letter captures every injury, test result, and physician note, reinforcing the strength of a case.
+        </p>
+        <p>
+          ClaimWrit will also prepare asset affidavits for MVAs at no additional cost upon request—a service that other legal writers charge separately for.
+        </p>
+      </div>
+    </section>
 
-    <h2>Rigorous Quality Control: Two-Tier Review Process</h2>
-    <p>
-      ClaimWrit prioritizes accuracy at every step. Each demand letter and post-settlement document is reviewed twice—first by the preparer and then by the team lead. With two sets of eyes on every file, attorneys can trust that every document arriving in their inbox is error-free, refined, and ready for submission.
-    </p>
-    <p>
-      ClaimWrit leverages AI-assisted tools when appropriate to support our meticulous review process, ensuring demand letters capture every relevant medical detail. This technology enhances accuracy while our team maintains direct oversight, reinforcing precision and legal integrity.
-    </p>
+    <section class="service-section" aria-labelledby="quality">
+      <h2 id="quality">Rigorous Quality Control: Two-Tier Review Process</h2>
+      <div class="service-content">
+        <p>
+          ClaimWrit prioritizes accuracy at every step. Each demand letter and post-settlement document is reviewed twice—first by the preparer and then by the team lead. With two sets of eyes on every file, attorneys can trust that every document arriving in their inbox is error-free, refined, and ready for submission.
+        </p>
+        <p>
+          ClaimWrit leverages AI-assisted tools when appropriate to support our meticulous review process, ensuring demand letters capture every relevant medical detail. This technology enhances accuracy while our team maintains direct oversight, reinforcing precision and legal integrity.
+        </p>
+      </div>
+    </section>
 
-    <h2>Customized Legal Support</h2>
-    <p>
-      ClaimWrit provides tailored demand-letter drafting and post-settlement solutions to match the unique needs of each law firm, ensuring seamless integration into legal workflows.
-    </p>
-    <p>
-      ClaimWrit stands as a trusted partner for law firms, providing attorneys with the precision and efficiency needed to navigate demand-letter preparation and post-settlement case resolution with confidence.
-    </p>
+    <section class="service-section" aria-labelledby="support">
+      <h2 id="support">Customized Legal Support</h2>
+      <div class="service-content">
+        <p>
+          ClaimWrit provides tailored demand-letter drafting and post-settlement solutions to match the unique needs of each law firm, ensuring seamless integration into legal workflows.
+        </p>
+        <p>
+          ClaimWrit stands as a trusted partner for law firms, providing attorneys with the precision and efficiency needed to navigate demand-letter preparation and post-settlement case resolution with confidence.
+        </p>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL · <a href="privacy.html">Privacy Policy</a></p>
   </footer>
 
 </body>
 </html>
-
