--- a/thank-you.html
+++ b/thank-you.html
@@ -3,18 +3,45 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="description" content="Thank you for contacting ClaimWrit. We'll follow up with your sample demand letter request shortly."/>
   <title>Thank You | ClaimWrit</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <nav>…same nav…</nav>
-  <main style="text-align:center; padding:3rem;">
-    <h1>Thank You for Your Request!</h1>
-    <p>Your request for a sample demand letter has been received. We’ll follow up shortly.</p>
-    <a href="index.html" class="cta-button">Return Home</a>
+  <nav aria-label="Main navigation">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
+      <li><a href="how-we-help.html">How We Help</a></li>
+      <li><a href="request-sample.html">Request Sample DEMAND</a></li>
+      <li><a href="client-upload.html">Client Portal</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="blog.html">Blog</a></li>
+    </ul>
+  </nav>
+
+  <main class="thank-you-container">
+    <div class="thank-you-card">
+      <svg class="thank-you-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+        <polyline points="22 4 12 14.01 9 11.01"></polyline>
+      </svg>
+      <h1>Thank You for Your Request!</h1>
+      <p class="thank-you-message">Your request for a sample demand letter has been received. We'll review your submission and follow up with you shortly.</p>
+      <div class="next-steps">
+        <p>What to expect next:</p>
+        <ul>
+          <li>Confirmation email within 1 business hour</li>
+          <li>Sample demand letter within 24 hours</li>
+          <li>Follow-up call to discuss your needs</li>
+        </ul>
+      </div>
+      <a href="index.html" class="cta-button">Return to Homepage</a>
+    </div>
   </main>
+
   <footer>
-    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL · <a href="privacy.html">Privacy Policy</a></p>
   </footer>
 </body>
 </html>
