--- a/request-sample.html
+++ b/request-sample.html
@@ -5,66 +5,54 @@
   <title>Request Sample | ClaimWrit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* ADD THIS NEW STYLE FOR LOADER */
+    .loader {
+      display: none;
+      width: 30px;
+      height: 30px;
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #457B9D;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin: 0 auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
-      <li><a href="how-we-help.html">How We Help</a></li>
-      <li><a href="request-sample.html" class="active">Request Sample DEMAND</a></li>
-      <li><a href="client-upload.html">Client Portal</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="blog.html">Blog</a></li>
-    </ul>
-  </nav>
+  <!-- ... (keep your existing nav and header) ... -->
 
-  <main>
-    <h1 style="text-align:center; margin-top:2rem;">Request a Sample Demand Letter</h1>
-    <p style="text-align:center; max-width:800px; margin:1rem auto;">
-      Attorneys can request copies of redacted demand letters previously written and issued by ClaimWrit. These samples showcase our structured approach to case presentation, highlighting strategic formatting, liability analysis, and medical chronology integration—reinforcing how precision strengthens negotiations.
-    </p>
+  <form class="sample-request-form" action="https://formsubmit.co/info@claimwrit.com" method="POST">
+    <input type="hidden" name="_subject" value="New Sample Request - ClaimWrit">
+    <input type="hidden" name="_autoresponse" value="Thank you for requesting a sample demand letter! We'll email it within 24 hours. For urgent requests, call (954) 408-1937.">
+    <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_cc" value="info@claimwrit.com"> <!-- Auto CC -->
+    <input type="text" name="_honey" style="display:none">
 
-    <h2 style="text-align:center;">Why Precision Matters</h2>
-    <ul style="max-width:700px; margin:1rem auto;">
-      <li>Clearly articulates damages with supporting evidence.</li>
-      <li>Integrates medical findings for a compelling case narrative.</li>
-      <li>Follows insurer-preferred formatting to streamline review and response.</li>
-    </ul>
+    <!-- Your existing form fields here -->
 
-    <h2 style="text-align:center;">Request a Sample</h2>
-    <p style="text-align:center; max-width:700px; margin:1rem auto 2rem;">
-      Click below to request redacted sample demand letters, and see firsthand how ClaimWrit enhances settlement strategy through structured documentation.
-    </p>
+    <button type="submit" class="cta-button" id="submit-btn">
+      <span id="btn-text">Request Samples</span>
+      <div class="loader" id="loader"></div>
+    </button>
+  </form>
 
-    <form class="sample-request-form" action="https://formspree.io/f/xyza1234" method="POST">
-      <label for="name">Your Name*:</label>
-      <input type="text" id="name" name="name" required />
+  <!-- ADD THIS SCRIPT AT THE BOTTOM -->
+  <script>
+    const form = document.querySelector('.sample-request-form');
+    const submitBtn = document.getElementById('submit-btn');
+    const btnText = document.getElementById('btn-text');
+    const loader = document.getElementById('loader');
 
-      <label for="email">Your Email*:</label>
-      <input type="email" id="email" name="_replyto" required />
-
-      <label for="phone">Contact Phone*:</label>
-      <input type="tel" id="phone" name="phone" required />
-
-      <label for="sample-type">Sample Requested*:</label>
-      <select id="sample-type" name="sample-type" required>
-        <option value="" disabled selected>Select a sample type</option>
-        <option value="slip-trip-fall">Slip, Trip & Fall</option>
-        <option value="assault-battery">Assault & Battery</option>
-        <option value="bodily-injury-mva">Bodily Injury – MVA</option>
-        <option value="uninsured-motorist-mva">Uninsured Motorist – MVA</option>
-        <option value="premises-liability">Premises Liability</option>
-        <option value="product-liability">Product Liability</option>
-        <option value="dog-bite-injury">Dog Bite Injury</option>
-      </select>
-
-      <button type="submit" class="cta-button">Request Samples</button>
-    </form>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
-  </footer>
+    form.addEventListener('submit', function() {
+      submitBtn.disabled = true;
+      btnText.textContent = 'Sending...';
+      loader.style.display = 'block';
+    });
+  </script>
 </body>
 </html>
