Updated all HTML files and styles.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </header>
 
-  <nav>
+  <nav aria-label="Main navigation">
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="our-mission.html">Our Mission &amp; Expertise</a></li>
@@ -31,20 +31,33 @@
     </ul>
   </nav>
 
-  <!-- REST OF YOUR EXISTING CONTENT REMAINS EXACTLY THE SAME -->
-  <main>
-    <section class="section-centered">
-      <h2>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h2>
+  <main class="home-container">
+    <section class="hero">
+      <h1>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h1>
       <p>Your back-office ally for clarity, structure, and resolution.</p>
+      <div class="cta-group">
+        <a href="how-we-help.html" class="cta-button">Learn How We Help</a>
+        <a href="request-sample.html" class="cta-button secondary">Request Sample</a>
+      </div>
     </section>
 
-    <!-- ALL OTHER SECTIONS REMAIN UNCHANGED -->
-    ...
-    
+    <section class="services-preview">
+      <h2>Our Services</h2>
+      <div class="preview-grid">
+        <div class="preview-card">
+          <h3>Demand Letter Drafting</h3>
+          <p>Meticulously crafted demand letters that strengthen negotiations.</p>
+        </div>
+        <div class="preview-card">
+          <h3>Settlement Analysis</h3>
+          <p>Comprehensive settlement breakdowns and lien resolution.</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 ClaimWrit LLC &middot; Fort Lauderdale, FL</p>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL · <a href="privacy.html">Privacy Policy</a></p>
   </footer>
 </body>
 </html>
