--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClaimWrit - Home</title>
+    <title>ClaimWrit - Contact</title>
     <style>
         body { font-family: Arial; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #2a5f8a; color: white; padding: 1rem; text-align: center; }
@@ -25,8 +25,9 @@
     </nav>
 
     <div class="container">
-        <h2>Welcome to ClaimWrit</h2>
-        <p>We provide meticulously drafted demand letters and post-settlement solutions.</p>
+        <h2>Contact Us</h2>
+        <p>Email: info@claimwrit.com</p>
+        <p>Phone: 954-408-1937</p>
     </div>
 
     <footer>
