--- a/mission.html
+++ b/mission.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClaimWrit - Home</title>
+    <title>ClaimWrit - Our Mission</title>
     <style>
         body { font-family: Arial; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #2a5f8a; color: white; padding: 1rem; text-align: center; }
@@ -25,8 +25,8 @@
     </nav>
 
     <div class="container">
-        <h2>Welcome to ClaimWrit</h2>
-        <p>We provide meticulously drafted demand letters and post-settlement solutions.</p>
+        <h2>Our Mission</h2>
+        <p>We are built on expertise, precision, and trust.</p>
     </div>
 
     <footer>
